Home UI and CSS in external file

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
       height: 100%;
     }
   </style>
+  <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
   <div id="app"></div>
